fixed styling and spacing on nav bar

--- a/app/assets/stylesheets/globalnavbar/navbar.css
+++ b/app/assets/stylesheets/globalnavbar/navbar.css
@@ -11,18 +11,26 @@
     z-index: 999;
 }
 
+.nav-bar-body {
+    /* width: 50%; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 #nav-bar-logo {
     width: 35px;
     height: 35px;
 }
 
 .global-left-nav-bar {
-    margin-right: max(17vw, 400px);
+    width: 54vw;
+    max-width: 820px
 }
 
 .global-right-nav-bar {
-    margin-left: 18vw;
-    margin-right: 15vw;
+    /* margin-right: 10vw;; */
+    width: 300px;
 }
 
 .nav-bar-dropdown-button {
