--- a/app/assets/stylesheets/profile/news.css
+++ b/app/assets/stylesheets/profile/news.css
@@ -8,9 +8,9 @@
 }
 
 #networkin-news-header {
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 500;
-    padding: 8px 8px;
+    padding: 12px 12px;
 }
 
 #networking-news-bullet {
